--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <junit.version>4.12</junit.version>
         <slf4j.version>1.5.8</slf4j.version>
         <log4j.version>1.2.14</log4j.version>
+        <commons.lang.version>3.4</commons.lang.version>
+        <commons.collections.version>4.1</commons.collections.version>
+        <commons.io.version>2.5</commons.io.version>
     </properties>
 
 
@@ -67,6 +70,24 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <!--apache commons-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons.collections.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
