--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>${commons.io.version}</version>
         </dependency>
 
+        <!--aop-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
