--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <commons.lang.version>3.4</commons.lang.version>
         <commons.collections.version>4.1</commons.collections.version>
         <commons.io.version>2.5</commons.io.version>
+        <aspectj.version>1.8.2</aspectj.version>
     </properties>
 
 
@@ -92,7 +93,7 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.2</version>
+            <version>${aspectj.version}</version>
         </dependency>
 
     </dependencies>
