--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,2 +1,6 @@
 cloudex.spring.name=better-spring
 cloudex.spring.lang=java
+jdbc.url=jdbc:hsqldb:mem:testdb
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.username=sa
+jdbc.password=
